<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/linear_layout_padding"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/editTextBoy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/boy"
            android:text="@string/edit_text_number_default"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/editTextGirl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/girl"
            android:text="@string/edit_text_number_default"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>