<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Switch
        android:id="@+id/languageToggle"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/language_nepali"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_text_view_padding"
                android:text="@string/geonet_description" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/horizontalBarColor" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_text_view_padding"
                android:text="@string/geonet_services" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/horizontalBarColor" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_text_view_padding"
                android:text="@string/geonet_contact" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email|phone" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>