<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/linear_layout_padding">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.CardView
            android:id="@+id/btnNewEntry"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_card_view"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_image_activity_home"
                android:src="@drawable/ic_action_new_entry" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/entry_data" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btnSyncData"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_card_view"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_image_activity_home"
                android:src="@drawable/ic_action_sync_data" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/sync_data" />
        </android.support.v7.widget.CardView>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.CardView
            android:id="@+id/btnStatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_card_view"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_image_activity_home"
                android:src="@drawable/ic_action_status" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/status" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btnSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_card_view"
            android:layout_weight="1"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_image_activity_home"
                android:src="@drawable/ic_action_settings" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/settings" />
        </android.support.v7.widget.CardView>
    </TableRow>

</LinearLayout>